syntax = "proto3";

package pro;

option  go_package = "protoc/greeter";

//声明grpc服务
service Greeter {
  // 普通方法
  rpc Say(Request) returns(Response){}
  /*以下 分别是 服务端 推送流， 客户端 推送流 ，双向流。*/
  rpc GetStream (StreamReqData) returns (stream StreamResData){}
  rpc PutStream (stream StreamReqData) returns (StreamResData){}
  rpc AllStream (stream StreamReqData) returns (stream StreamResData){}
}


//stream请求结构
message StreamReqData {
  string data = 1;
}
//stream返回结构
message StreamResData {
  string data = 1;
}

message Request{
  string name = 1;
}
message Response{
  string message = 1;
}